# iot-platform

./: .gitignore  README  docker-compose.yaml  docker-compose.yml  run.sh  stack.yml  test.py
grafana/dashboards/: battery.json  main.json
grafana/datasources/: datasource.yml
influxdb/: config.yml  influx-configs
ingestor/: Cargo.toml  Dockerfile
ingestor/src/: main.rs  util.rs
