[package]
name = "ingestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
influxdb = "0.5.2"
log = "0.4.17"
paho-mqtt = { version = "0.11.1", default-features = false, features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
simple_logger = "4.0.0"
tokio = { version = "1.23.1", features = ["full"] }
